Add links to OSS group on GCcollab

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -98,7 +98,7 @@ permalink: home.html
     <section class="lnkbx">
       <h2>Featured Working Groups</h2>
       <ul>
-        <li><a href="#">[Working Group name]</a></li>
+        <li><a href="https://gccollab.ca/groups/profile/5911">Open Source Software group on GCcollab</a></li>
         <li><a href="#">[Working Group name]</a></li>
         <li><a href="#">[Working Group name]</a></li>
       </ul>
