--- a/_pages/fr/accueil.html
+++ b/_pages/fr/accueil.html
@@ -98,7 +98,7 @@ permalink: accueil.html
     <section class="lnkbx">
       <h2>Groupe de travails en vedettes</h2>
       <ul>
-        <li><a href="#">[Nom du groupe de travail]</a></li>
+        <li><a href="https://gccollab.ca/groups/profile/5911">Groupe Logiciels libres sur GCcollab</a></li>
         <li><a href="#">[Nom du groupe de travail]</a></li>
         <li><a href="#">[Nom du groupe de travail]</a></li>
       </ul>
