--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -8,7 +8,7 @@ permalink: home.html
 <div class="row profile">
   <div class="col-md-6">
     <h1 property="name" id="wb-cont">{{ site.title.en }}</h1>
-    <p>Explore how the Government of Canada creates greater transparency, accountability, increases citizen engagement, and drives innovation and economic opportunities through open Standards, open source software, open data, open information, open dialogue and open Government.</p>
+    <p>Explore how Canadian public administrations (federal, provincial, territorial and municipal) creates greater transparency, accountability, increases citizen engagement, and drives innovation and economic opportunities through open Standards, open source software, open data, open information, open dialogue and open Government.</p>
     <section class="followus">
       <h2>Follow:</h2>
       <ul>
@@ -36,14 +36,14 @@ permalink: home.html
       <div class="col-md-6">
         <section>
           <h3 class="h5"><a href="./open-source-software.html">Open source software</a></h3>
-          <p>Search open source software used by the Government of Canada, promote collaboration and reuse of preferred solutions.</p>
+          <p>Search open source software used by Canadian public administrations, promote collaboration and reuse of preferred solutions.</p>
         </section>
       </div>
 
       <div class="col-md-6">
         <section>
           <h3 class="h5"><a href="./open-source-code.html">Open source code</a></h3>
-          <p>Search Government of Canada open source projects and code repositories, get access to code and software, and contribute to ongoing development.</p>
+          <p>Search Canadian public administrations open source projects and code repositories, get access to code and software, and contribute to ongoing development.</p>
         </section>
       </div>
 
