--- a/_pages/fr/accueil.html
+++ b/_pages/fr/accueil.html
@@ -8,7 +8,7 @@ permalink: accueil.html
 <div class="row profile">
   <div class="col-md-6">
     <h1 property="name" id="wb-cont">{{ site.title.fr }}</h1>
-    <p>Découvrez comment le gouvernement du Canada crée davantage de transparence et de responsabilisation, augmente la mobilisation citoyenne et favorise l’innovation et les possibilités économiques au moyen de normes ouvertes, logiciels libres, données ouvertes, d’information ouverte, de dialogue ouvert et du Gouvernement ouvert.</p>
+    <p>Découvrez comment les administrations publiques Canadiennes (fédérales, provinciales, territoriales et municipales) créent davantage de transparence et de responsabilisation, augmente la mobilisation citoyenne et favorise l’innovation et les possibilités économiques au moyen de normes ouvertes, logiciels libres, données ouvertes, d’information ouverte, de dialogue ouvert et du Gouvernement ouvert.</p>
     <section class="followus">
       <h2>Suivez&nbsp;:</h2>
       <ul>
@@ -36,14 +36,14 @@ permalink: accueil.html
       <div class="col-md-6">
         <section>
           <h3 class="h5"><a href="./logiciels-libres.html">Logiciels libres</a></h3>
-          <p>Effectuez des recherches dans les logiciels libres utilisés par le gouvernement du Canada, promouvez la collaboration et la réutilisation de solutions préférées.</p>
+          <p>Effectuez des recherches dans les logiciels libres utilisés par les administrations publiques Canadiennes, promouvez la collaboration et la réutilisation de solutions préférées.</p>
         </section>
       </div>
 
       <div class="col-md-6">
         <section>
           <h3 class="h5"><a href="./code-source-ouvert.html">Code source ouvert</a></h3>
-          <p>Effectuez des recherches dans les projets (logiciels) libres et dépôts de code du gouvernement du Canada, accédez le code et les logiciels, et contribuer au développement en cours.</p>
+          <p>Effectuez des recherches dans les projets libres et dépôts de code des administrations publiques Canadiennes, accédez le code et les logiciels, et contribuer au développement en cours.</p>
         </section>
       </div>
 
