Fix WET links for splash

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@ lang: en-fr
 		<meta name="dcterms.language" lang="fr" title="ISO639-2" content="fra">
 		<meta name="robots" content="noindex, follow">
 		<!--[if gte IE 9 | !IE ]><!-->
-		<link href="{{ site.baseurl }}/assets/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/wet-boew/css/theme.min.css">
+		<link href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/favicon.ico" rel="icon" type="image/x-icon">
+		<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/theme.min.css">
 		<!--<![endif]-->
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/wet-boew/css/messages.min.css">
+		<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/messages.min.css">
 		<!--[if lt IE 9]>
-				<link href="{{ site.baseurl }}/assets/wet-boew/assets/favicon.ico" rel="shortcut icon" />
-				<link rel="stylesheet" href="{{ site.baseurl }}/assets/wet-boew/css/messages-ie.min.css" />
-				<link rel="stylesheet" href="{{ site.baseurl }}/assets/wet-boew/css/ie8-theme.min.css" />
+				<link href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/favicon.ico" rel="shortcut icon" />
+				<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/messages-ie.min.css" />
+				<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/ie8-theme.min.css" />
 				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-				<script src="{{ site.baseurl }}/assets/wet-boew/js/ie8-wet-boew.min.js"></script>
+				<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew.min.js"></script>
 				<![endif]-->
 		<!--[if lte IE 9]><![endif]-->
 		
-		<noscript><link rel="stylesheet" href="{{ site.baseurl }}/assets/wet-boew/css/noscript.min.css" /></noscript>
+		<noscript><link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/noscript.min.css" /></noscript>
 		<!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
 		<script>dataLayer1 = [];</script>
 		<!-- End Google Tag Manager -->
@@ -48,7 +48,7 @@ lang: en-fr
 		<!-- End Google Tag Manager -->
 		
 		<div id="bg">
-			<img src="{{ site.baseurl }}/assets/wet-boew/assets/sp-bg-2.jpg" alt="">
+			<img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sp-bg-2.jpg" alt="">
 		</div>
 		
 		<main role="main">
@@ -57,7 +57,7 @@ lang: en-fr
 					<h1 property="name" class="wb-inv">Canada-ca</h1>
 					<div class="row">
 						<div class="col-xs-11 col-md-8">
-							<object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/assets/wet-boew/assets/sig-spl.svg" width="283" aria-label="Government of Canada / Gouvernement du Canada"></object>
+							<object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-spl.svg" width="283" aria-label="Government of Canada / Gouvernement du Canada"></object>
 						</div>
 					</div>
 				
@@ -81,7 +81,7 @@ lang: en-fr
 						</div>
 				
 						<div class="col-xs-5 col-md-4 text-right mrgn-bttm-md">
-							<object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/assets/wet-boew/assets/wmms-spl.svg" width="127" aria-label="Symbol of the Government of Canada / Symbole du gouvernement du Canada"></object>
+							<object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-spl.svg" width="127" aria-label="Symbol of the Government of Canada / Symbole du gouvernement du Canada"></object>
 						</div>
 					</div>
 				</div>
@@ -90,12 +90,12 @@ lang: en-fr
 
 		<!--[if gte IE 9 | !IE ]><!-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-		<script src="{{ site.baseurl }}/assets/wet-boew/js/wet-boew.min.js"></script>
+		<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/wet-boew.min.js"></script>
 		<!--<![endif]-->
 		<!--[if lt IE 9]>
-				<script src="{{ site.baseurl }}/assets/wet-boew/js/ie8-wet-boew2.min.js"></script>
+				<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew2.min.js"></script>
 		
 				<![endif]-->
-		<script src="{{ site.baseurl }}/assets/wet-boew/js/theme.min.js"></script>
+		<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/theme.min.js"></script>
 	</body>
 </html>
