--- a/404.html
+++ b/404.html
@@ -14,16 +14,16 @@ permalink: /404.html
 <meta name="robots" content="noindex, nofollow, noarchive">
 <!-- Meta data-->
 <!--[if gte IE 9 | !IE ]><!-->
-<link href="{{ site.baseurl }}/assets/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/wet-boew/css/theme-srv.min.css">
+<link href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/favicon.ico" rel="icon" type="image/x-icon">
+<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/theme-srv.min.css">
 <!--<![endif]-->
 <!--[if lt IE 9]>
-		<link href="{{ site.baseurl }}/assets/wet-boew/assets/favicon.ico" rel="shortcut icon" />
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/wet-boew/css/ie8-theme-srv.min.css" />
+		<link href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/favicon.ico" rel="shortcut icon" />
+		<link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}w/css/ie8-theme-srv.min.css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
-		<script src="{{ site.baseurl }}/assets/wet-boew/js/ie8-wet-boew.min.js"></script>
+		<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew.min.js"></script>
 		<![endif]-->
-<noscript><link rel="stylesheet" href="{{ site.baseurl }}/assets/wet-boew/css/noscript.min.css" /></noscript>
+<noscript><link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/noscript.min.css" /></noscript>
 </head>
 <body vocab="http://schema.org/" typeof="WebPage">
 <header role="banner" id="wb-bnr" class="container">
@@ -32,7 +32,7 @@ permalink: /404.html
 <object id="gcwu-sig" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/assets/wet-boew/assets/sig-blk-en.svg" aria-label="Government of Canada / Gouvernement du Canada"></object>
 </div>
 <div class="col-sm-6">
-<object id="wmms" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/assets/wet-boew/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
+<object id="wmms" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
 </div>
 </div>
 </header>
@@ -57,12 +57,12 @@ permalink: /404.html
 </main>
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<script src="{{ site.baseurl }}/assets/wet-boew/js/wet-boew.min.js"></script>
+<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/wet-boew.min.js"></script>
 <!--<![endif]-->
 <!--[if lt IE 9]>
-		<script src="{{ site.baseurl }}/assets/wet-boew/js/ie8-wet-boew2.min.js"></script>
+		<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew2.min.js"></script>
 		
 		<![endif]-->
-<script src="{{ site.baseurl }}/assets/wet-boew/js/theme.min.js"></script>
+<script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/theme.min.js"></script>
 </body>
 </html>
