--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@ permalink: /404.html
 <header role="banner" id="wb-bnr" class="container">
 <div class="row">
 <div class="col-sm-6">
-<object id="gcwu-sig" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.baseurl }}/assets/wet-boew/assets/sig-blk-en.svg" aria-label="Government of Canada / Gouvernement du Canada"></object>
+<object id="gcwu-sig" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-blk-en.svg" aria-label="Government of Canada / Gouvernement du Canada"></object>
 </div>
 <div class="col-sm-6">
 <object id="wmms" type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/wmms-blk.svg" aria-label="Symbol of the Government of Canada"></object>
