Fix title for splash

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ lang: en-fr
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Canada-ca</title>
+		<title>Open Resource Exchange - Échange de ressources ouvert</title>
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<meta name="description" content="">
 		<meta name="description" lang="fr" content="">
