Open standards schema and initial table

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -26,12 +26,12 @@ permalink: home.html
   <section class="col-md-8 pull-left">
     <h2>Services and information</h2>
     <div class="wb-eqht row">
-      <!--<div class="col-md-6">
+      <div class="col-md-6">
         <section>
           <h3 class="h5"><a href="./open-standards.html">Open Standards</a></h3>
-          <p>Summary of the information or tasks that can be accomplished on the sub-topic page. Use action verbs.</p>
+          <p>Search open standards used by Canadian public administrations.</p>
         </section>
-      </div>-->
+      </div>
 
       <div class="col-md-6">
         <section>
