--- a/_pages/fr/accueil.html
+++ b/_pages/fr/accueil.html
@@ -26,12 +26,12 @@ permalink: accueil.html
   <section class="col-md-8 pull-left">
     <h2>Services et renseignements</h2>
     <div class="wb-eqht row">
-      <!--<div class="col-md-6">
+      <div class="col-md-6">
         <section>
           <h3 class="h5"><a href="./normes-ouvertes.html">Normes ouvertes</a></h3>
-          <p>Résumé des renseignements disponibles ou des tâches pouvant être accomplies sur la page. Utilisez une formulation basée sur l'action.</p>
+          <p>Effectuez des recherches dans les normes ouvertes utilisés par les administrations publiques Canadiennes.</p>
         </section>
-      </div>-->
+      </div>
 
       <div class="col-md-6">
         <section>
