--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -6,6 +6,6 @@ permalink: /open-standards.html
 ---
 
 <h1>Open Standards</h1>
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations.</p>
+<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="normes_ouvertes-open_standards.json" target="_blank">JSON format</a>.</p>
 
 {% include openStandardsTable.html %}
