--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -6,6 +6,6 @@ permalink: /normes-ouvertes.html
 ---
 
 <h1>Normes ouvertes</h1>
-<p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les normes ouvertes utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada.</p>
+<p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les normes ouvertes utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada. Les données sont aussi disponible en <a href="normes_ouvertes-open_standards.json" target="_blank">format JSON</a>.</p>
 
 {% include openStandardsTable.html %}
