call html template file in english and french pages

--- a/_pages/fr/code-source-ouvert-schema.html
+++ b/_pages/fr/code-source-ouvert-schema.html
@@ -8,3 +8,6 @@ permalink: /code-source-ouvert-schema.html
 <h1>Schéma de métadonnées pour code source ouvert</h1>
 <p>Le schéma de métadonnées pour la section <a href="code-source-ouvert.html">Code source ouvert</a>.</p>
 <p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
+<p>Les champs obligatoires sont marqués en blanc.</p>
+
+{% include oscSchemaTable.html %}
