--- a/_pages/en/open-source-code-schema.html
+++ b/_pages/en/open-source-code-schema.html
@@ -8,3 +8,6 @@ permalink: /open-source-code-schema.html
 <h1>Metadata Schema for Open Source Code</h1>
 <p>The metadata schema for the <a href="open-source-code.html">Open Source Code</a> section.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.
+<p>The mandatory field are marked in white.</p>
+
+{% include oscSchemaTable.html %}
