--- a/_pages/en/open-source-code-schema.html
+++ b/_pages/en/open-source-code-schema.html
@@ -8,3 +8,368 @@ permalink: /open-source-code-schema.html
 <h1>Metadata Schema for Open Source Code</h1>
 <p>The metadata schema for the <a href="open-source-code.html">Open Source Code</a> section.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.
+<p>Mandatory fields are marked in dark blue.</p>
+
+<ul class="list-unstyled">
+    <li>
+    <details> 
+        <summary><span class="bg-primary">schemaVersion</span> [string]</summary>
+        <p>The version of the ORE data schema for Code used. For example, 1.0</p>
+    </details> 
+    </li>  
+    
+    <li>
+    <details> 
+        <summary><span class="bg-primary">adminCode</span> [string]</summary>
+        <p>Administration code - https://github.com/canada-ca/ore-ero/blob/master/_data/administrations</p>
+    </details> 
+    </li>  
+    
+    <li>
+    <details>   
+        <summary><span class="bg-primary">releases</span> [array]</summary>
+        <p>Contains objects representing each versioned source code release made available.</p>            
+        <ul class="list-unstyled">
+            <li>
+            <details> 
+                <summary><span class="bg-primary">contact</span> [array]</summary>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>URL [array]</summary>
+                        <ul class="list-unstyled">
+                            <li>
+                            <details>
+                                <summary>en [string]</summary>
+                                <p>The URL to a website that can be used to reach the point of contact.</p>
+                            </details>
+                            </li>
+                            <li>
+                            <details>
+                                <summary>fr [string]</summary>
+                                <p>~</p>
+                            </details>
+                            </li>
+                        </ul>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary><span class="bg-primary">email</span> [string]</summary>
+                        <p>An email address to contact the release.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>name [string]</summary>
+                        <p>The name of a contact or team for the release.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>phone [string]</summary>
+                        <p>The phone number to contact a release.</p>
+                    </details>
+                    </li>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary><span class="bg-primary">date</span> [array]</summary>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary><span class="bg-primary">created</span> [string]</summary>
+                        <p>The date the release was originally created, in YYYY-MM-DD or ISO 8601 format.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>lastModified [string]</summary>
+                        <p>The date the release was modified, in YYYY-MM-DD or ISO 8601 format.</p>
+                    </details>
+                    </li>
+                    <details>
+                        <summary><span class="bg-primary">metadataLastUpdated</span> [string]</summary>
+                        <p>The date the metadata of the release was last updated, in YYYY-MM-DD or ISO 8601 format.</p>
+                    </details>
+                    </li>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary><span class="bg-primary">description</span> [array]</summary>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>en [string]</summary>
+                        <p>A one- or two-sentence description of the release.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>fr [string]</summary>
+                        <p>~</p>
+                    </details>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>downloadURL [array]</summary>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>en [string]</summary>
+                        <p>The URL where a distribution of the release can be found.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>fr [string]</summary>
+                        <p>~</p>
+                    </details>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>homepageURL [array]</summary>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>en [string]</summary>
+                        <p>The URL of the public release homepage.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>fr [string]</summary>
+                        <p>~</p>
+                    </details>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>languages [array]</summary>
+                <p>A list of strings with the names of the programming languages in use on the release [lang1, lang2]</p>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary><span class="bg-primary">name</span> [string]</summary>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>en [string]</summary>
+                        <p>The name of the release in English.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>fr [string]</summary>
+                        <p>~</p>
+                    </details>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>organization [array]</summary>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>en [string]</summary>
+                        <p>The organization or component within the department of agency to which the release belong. For example, 'CDS' or 'Open Government'.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>fr [string]</summary>
+                        <p>~</p>
+                    </details>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>Partner [array]</summary>
+                <p>An array of objects including an acronym for each agency partnering on the release and the contact email at such agency.</p>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>URL [array]</summary>
+                        <ul class="list-unstyled">
+                            <li>
+                            <details>
+                                <summary>en [string]</summary>
+                                <p>The URL to a website that can be used to reach the partner.</p>
+                            </details>
+                            </li>
+                            <li>
+                            <details>
+                                <summary>fr [string]</summary>
+                                <p>~</p>
+                            </details>
+                            </li>
+                        </ul>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>email [string]</summary>
+                        <p>The email address for the point of contact at the partner agency.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>name [string]</summary>
+                        <p>The name of the partner of the point of contact.</p>
+                    </details>
+                    </li>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary><span class="bg-primary">licenses</span> [array of objects]</summary>
+                <p>An object containing license details.</p>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>URL [array]</summary>
+                        <ul class="list-unstyled">
+                            <li>
+                            <details>
+                                <summary>en [string]</summary>
+                                <p>The URL of the release license.</p>
+                            </details>
+                            </li>
+                            <li>
+                            <details>
+                                <summary>fr [string]</summary>
+                                <p>~</p>
+                            </details>
+                            </li>
+                        </ul>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>spdxID [string]</summary>
+                        <p>SPDX License identifier - https://spdx.org/licenses/</p>
+                    </details>
+                    </li>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary><span class="bg-primary">repositoryCode</span> [array]</summary>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>en [string]</summary>
+                        <p>The URL of the public release repository for open source repositories.</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>fr [string]</summary>
+                        <p>~</p>
+                    </details>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>relatedCode [array]</summary>
+                <p>An array of source code, libraries, frameworks, APIs, platforms or other software used in this release.</p>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>URL [array]</summary>
+                        <ul class="list-unstyled">
+                            <li>
+                            <details>
+                                <summary>en [string]</summary>
+                                <p>The URL where the software can be found.</p>
+                            </details>
+                            </li>
+                            <li>
+                            <details>
+                                <summary>fr [string]</summary>
+                                <p>~</p>
+                            </details>
+                            </li>
+                        </ul>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>name [string]</summary>
+                        <p>The name of the software used in this release.</p>
+                    </details>
+                    </li>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>status [string]</summary>
+                <p>The development status of the release. For example, Production, Beta, ..</p>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary><span class="bg-primary">tags</span> [array]</summary>
+                <p>An array of keywords that will be helpful in discovering and searching for the release.</p>
+                <ul class="list-unstyled">
+                    <li>
+                    <details>
+                        <summary>en [string]</summary>
+                        <p>[tag1-en, tag2-en]</p>
+                    </details>
+                    </li>
+                    <li>
+                    <details>
+                        <summary>fr [string]</summary>
+                        <p>[tag1-en, tag2-en]</p>
+                    </details>
+                </ul>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>vcs [string]</summary>
+                <p>A lowercase string with the name of the version control system that is being used for the release. For example, git, svn, ..</p>
+            </details>
+            </li>
+
+            <li>
+            <details> 
+                <summary>version [string]</summary>
+                <p>The version for this release. For example, 1.0.0</p>
+            </details>
+            </li>
+        </ul>
+    </details>
+    </li>
+</ul>
