--- a/_pages/fr/code-source-ouvert-orgs.html
+++ b/_pages/fr/code-source-ouvert-orgs.html
@@ -5,6 +5,8 @@ lang: fr
 permalink: /code-source-ouvert-orgs.html
 ---
 <h1>La liste des répertoires de gestion collaborative du code source ouvert </h1>
+<p>L'administration publique canadienne au niveau fédéral, provincial, territorial et municipal utilise Github, Gitlab et autres répertoires de code pour contribuer au code source ouvert.</p>
+
 <ul class="list-unstyled">
  <li>
     <details> 
