add a short description in the header of the page

--- a/_pages/en/open-source-code-orgs.html
+++ b/_pages/en/open-source-code-orgs.html
@@ -5,7 +5,7 @@ lang: en
 permalink: /open-source-code-orgs.html
 ---
 <h1>List of code open source repositories</h1>
-<p>Canadian public administration at the federal, provincial, territorial and municipal level use Github, Gitlab and others code repositories to contribute to open source code.</p>
+<p>Canadian public administrations at the federal, provincial, territorial and municipal level use Github, Gitlab and others code repositories to contribute to open source code.</p>
 
 <ul class="list-unstyled">
  <li>
