htmlproofer options, fix errors!

--- a/_pages/en/home.html
+++ b/_pages/en/home.html
@@ -12,7 +12,7 @@ permalink: home.html
   </div>
 
   <div class="col-md-4 margin-top-small hidden-sm hidden-xs">
-    <img src="{{ site.baseurl }}/assets/logo_canada-ogp.png" alt="Map of Canada with Open Government Partnership colors" class="pull-right img-responsive thumbnail">
+    <img src="./assets/logo_canada-ogp.png" alt="Map of Canada with Open Government Partnership colors" class="pull-right img-responsive thumbnail">
   </div>
 </div>
 
