--- a/_pages/en/open-source-code-schema.html
+++ b/_pages/en/open-source-code-schema.html
@@ -5,7 +5,7 @@ lang: en
 permalink: /open-source-code-schema.html
 ---
 
-<h1>Metadata Schema for Open Source Code</h1>
+<h1 property="name" id="wb-cont">Metadata Schema for Open Source Code</h1>
 <p>The metadata schema for the <a href="open-source-code.html">Open Source Code</a> section.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.
 <p>Mandatory fields are marked in dark blue.</p>
