--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -5,7 +5,7 @@ lang: fr
 permalink: /logiciels-libres.html
 ---
 
-<h1>Logiciels libres</h1>
+<h1 property="name" id="wb-cont">Logiciels libres</h1>
 <p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les logiciels libres utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada. Les données sont aussi disponible en <a href="logiciels_libres-open_source_software.json" target="_blank">format JSON</a>.</p>
 
 {% include ossTable.html %}
