--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ lang: en-fr
 		<!-- End Google Tag Manager -->
 		
 		<div id="bg">
-			<img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sp-bg-2.jpg" alt="">
+			<img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sp-bg-2.jpg" alt="Blurry mountains / Montagnes floues">
 		</div>
 		
 		<main role="main">
@@ -57,7 +57,7 @@ lang: en-fr
 					<h1 property="name" class="wb-inv">Canada-ca</h1>
 					<div class="row">
 						<div class="col-xs-11 col-md-8">
-							<object type="image/svg+xml" tabindex="-1" role="img" data="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-spl.svg" width="283" aria-label="Government of Canada / Gouvernement du Canada"></object>
+							<img src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/assets/sig-spl.svg" width="283" alt="Government of Canada / Gouvernement du Canada">
 						</div>
 					</div>
 				
